// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render with container variant 1`] = `
<div>
  <button
    class="px-5 py-3 rounded-md hover:opacity-70 bg-primary-500 text-white "
  >
    Button
  </button>
</div>
`;

exports[`Button component should render with outlined variant 1`] = `
<div>
  <button
    class="px-5 py-3 rounded-md hover:opacity-70 bg-white dark:bg-dark-300 text-dark-50 border border-solid border-light-700 "
  >
    Button
  </button>
</div>
`;
